--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+             
             ],
             "scripts": []
           },
@@ -119,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "e-comm"
+    }
+  },
+  "defaultProject": "e-comm",
+  "cli": {
+    "analytics": "4d59ea27-1172-4f3b-b0ca-c4cd0d45cab1"
+  }
 }
